# Pathoryx

./: .dockerignore  .env.example  .env.windows.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DASHBOARD.md  DATABASE_SETUP.md  DICOM_PHASE11A_NATIVE_ENGINE_REPORT.md  DICOM_PHASE11C_UPLOAD_SEPARATION_REPORT.md  DICOM_UPLOADER_PHASE0_AUDIT_REPORT.md  FAILURE_RECOVERY.md  MIGRATION_PLAN.md  NEXTFLOW.md  OBSERVABILITY.md  OPERATIONS.md  README.md  RECOVERY_SENTRY.md  RUNBOOK.md  SECURITY_MODEL.md  SETUP.md  TESTING_WITH_REAL_DATA.md  TROUBLESHOOTING.md  WINDOWS_RUNBOOK.md  WINDOWS_SETUP.md  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml  run_DPARS_windows.ps1  run_palantir.sh  run_palantir_headless.sh  runner_daily_enterprise.py
configs/: babelshark_config.linux.yaml  babelshark_config.windows.yaml  babelshark_config.yaml  dicom_config.linux.yaml  dicom_config.windows.yaml  dicom_config.yaml  dicom_config_production.yaml  dicom_config_windows.yaml  qc_config.linux.yaml  qc_config.windows.yaml  qc_config.yaml  qc_config.yaml.save  qc_service.yaml  recovery_sentry.linux.yaml  recovery_sentry.windows.yaml  recovery_sentry.yaml  scanner_fleet.yaml
dashboard-ui/: index.html  package-lock.json  package.json  vite.config.ts
dashboard-ui/src/: App.tsx  index.css  main.tsx
docker/: Dockerfile.babelshark  Dockerfile.base  Dockerfile.dicom  Dockerfile.failed_watcher  Dockerfile.qc  Dockerfile.recovery_sentry  Dockerfile.uploader
docs/: BABELSHARK_PIPELINE.md  MIGRATION_NOTES.md  PATHORYX_PROJECT_STATE.md  PIPELINE_STAGES.md  QC_ARCHITECTURE_DESIGN.md  TROUBLESHOOTING.md  WINDOWS_MIGRATION_CHECKLIST.md  ai_handoff.md  babelshark_implementation_status.md  babelshark_pipeline_gap_analysis.md  current_project_state.md  master_context.md  operational_policy_configuration_guide.md  windows_environment_setup_guide.md  windows_runtime_setup.md
models_weights/: README.md
nextflow/: main.nf  nextflow.config
nextflow/modules/: babelshark.nf  dicom.nf  qc.nf  upload.nf
pathoryx_enterprise/config/: settings.py
pathoryx_enterprise/db/: base.py  contracts.py  engine.py  session.py
reports/: diagrams.md  pathoryx_enterprise_architecture.md  schema_summary.json
resources/: stain_error_replacements.json  stain_list.json
roisets/: G1.json  G10.json  G11.json  G12.json  G13.json  G2.json  G3.json  G4.json  G5.json  G6.json  G7.json  G8.json  G9.json
scripts/: windows_bootstrap_dirs.ps1  windows_run_migrations.ps1  windows_smoke_test.ps1  windows_start_dashboard_backend.ps1  windows_start_dashboard_frontend.ps1  windows_start_orchestrator.ps1
tests/: conftest.py
(+291 files in other folders)
